<resources>
    <string name="app_name">GeoTracker</string>
    <string name="txtError">Error</string>
    <string name="txtLoading">Loading...</string>

    <!-- Login Activity -->
    <string name="txtLoginMail">Introduce an user</string>
    <string name="txtLoginPassword">Introduce a password</string>
    <string name="btnLogin">Login</string>
    <string name="txtNoFields">Field cannot be empty</string>
  
    <!-- Menu Activity -->
    <string name="recordhistory">Record history</string>
    <string name="recordsmap">General map</string>
    <string name="options">Options</string>
  
    <!-- General Map -->
    <string name="txtLat">Latitude: </string>
    <string name="txtLong">Longitude: </string>
    <string name="txtProject">Choose a project</string>
    <string name="txtCurrLocation">Current location</string>
    <string name="txtNoRecord">Error, no record found</string>

    <string-array name="spinnerUsers">
        <item>Joan Josep</item>
        <item>Xavier</item>
        <item>Dejan</item>
        <item>David</item>
        <item>All</item>
    </string-array>

    <string-array name="spinnerProj">
        <item>Project One</item>
        <item>Project Two</item>
        <item>Project Three</item>
        <item>All</item>
    </string-array>

    <!-- Historic -->
    <string name="user">User</string>
    <string name="project">Project</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="txtNoRecords">No records found</string>

    <!-- Record Registration -->
    <string name="createdBy">Created by:</string>
    <string name="txtProj">Project: </string>
    <string name="txtDate">Date of the record:</string>
    <string name="txtPosition">Position: </string>
    <string name="txtDescription">Description</string>
    <string name="txtTemp">Temperature (Cº)</string>
    <string name="txtHum">Relative Humidity (%)</string>
    <string name="btnAddField">+</string>
    <string name="btnSend">Send Record</string>

    <!--Options-->
    <string name="Use_mobile_sensors">Use mobile sensors</string>
    <string name="temperature_sensor">Temperature sensor</string>
    <string name="humidity_sensor">Humidity sensor</string>
    <string name="magnetic_field_sensor">Magnetic field sensor</string>
    <string name="pressure_sensor">Pressure sensor</string>
    <string name="enable_data_use">Enable data use</string>
    <string name="txtNetwork">Internet</string>

    <!--Add field-->
    <string name="field_title">Field title</string>
    <string name="text">Plain text</string>
    <string name="numeric">Numeric</string>
    <string name="temperature">Temperature (Cº)</string>
    <string name="humidity">Humidity (%)</string>
    <string name="pressure">Pressure (Pa)</string>
    <string name="magnetic_field">Magnetic field</string>

    <string-array name="field_types">
        <item>@string/text</item>
        <item>@string/numeric</item>
        <item>@string/temperature</item>
        <item>@string/humidity</item>
        <item>@string/pressure</item>
    </string-array>
    <string name="create_field">Create field</string>

    <!-- View Record -->
    <string name="btnSaveChanges">Save Changes</string>
    <string name="txtRecordSaved">Record saved</string>

    <!-- Project Selector-->
    <string name="txtNoProjects">Error, no projects loaded</string>

    <!-- Menu -->
    <string name="txtAddRecord">Add record</string>
    <string name="txtHistoricRecord">Historic records</string>
    <string name="txtOptions">Options</string>
    <string name="txtFollowGPS">Follow GPS</string>
    <string name="txtFollowGPSOn">Follow GPS On</string>
    <string name="txtFollowGPSOff">Follow GPS Off</string>
    <string name="sendrecords">Send records</string>
    <string name="txtMenuLock">Edit fields</string>
    <string name="txtMenuLockOn">Locked fields</string>
    <string name="txtMenuLockOff">Unlocked fields</string>
    <string name="plain_text">Text</string>
    <string name="txtTo">to</string>
    <string name="txtAll">All</string>

    <!-- General -->
    <string name="txtNoInternet">Error, no internet connection</string>
</resources>
