<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/Use_mobile_sensors">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="tempS"
            android:title="@string/temperature_sensor" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="humS"
            android:title="@string/humidity_sensor" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pressS"
            android:title="@string/pressure_sensor" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="magfS"
            android:title="@string/magnetic_field_sensor" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/txtNetwork">

        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_net_data"
            android:title="@string/enable_data_use" />
    </PreferenceCategory>
</PreferenceScreen>