<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add_record"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/txtAddRecord"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuFollowGPS"
        android:icon="@drawable/ic_media_play_dark"
        android:title="@string/txtFollowGPS"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_history"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/txtHistoricRecord"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_options"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/txtOptions"
        app:showAsAction="ifRoom" />
</menu>