<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juanjo.udl.geotracker.MenuActivity">


    <Button
        android:id="@+id/bthistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recordhistory"
        />

    <Button
        android:id="@+id/btmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recordsmap"/>

    <Button
        android:id="@+id/btoptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options"/>

</LinearLayout>
